@@ -16,6 +16,9 @@ WebAuth 4.5.4 (unreleased)
     Fix the webauth/webkdc.h header prototype for webauth_user_validate to
     correctly allow the user state parameter to be NULL.
 
+    Log (at the info level) whenever mod_webkdc ignores expired
+    webkdc-factor or webkdc-proxy tokens passed to <requestTokenRequest>.
+
 WebAuth 4.5.3 (2013-05-15)
 
     SECURITY: Reset all header contents between WebLogin requests, fixing
